2005-06-21  Edward Hervey  <edward@fluendo.com>

	* gnl/gnltimeline.c: (gnl_timeline_new): 
	* gnl/gnlcomposition.c: (gnl_composition_new): 
	* gnl/gnloperation.c: (gnl_operation_new): 
	* gnl/gnlsource.c: (gnl_source_new): 
	
	Removed buggy GST_INFO

2005-06-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* acconfig.h:
	* acinclude.m4:
	  remove
	* common/m4/as-compiler-flag.m4:
	* common/m4/as-compiler.m4:
	* common/m4/as-libtool.m4:
	* common/m4/as-scrub-include.m4:
	* common/m4/as-version.m4:
	* common/m4/ax_create_stdint_h.m4:
	  sync with upstream
	* configure.ac:
	* gnonlin-uninstalled.pc.in:
	  fix up in sync with the installed copy
	* gnonlin.pc.in:
	  typos

2005-06-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/libs/Makefile.am:
	  comment out the DOC_OVERRIDES

2005-06-08  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c: (gnl_timeline_timer_loop):
	avoid outputting 2 EOS events if there's only one composition

2005-06-03  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	* Makefile.am:
	* common/Makefile.am:
	Forgot to add some files to the dist

2005-05-26  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:	Releasing 0.2.2

2005-05-26  Edward Hervey  <bilboed@bilboed.com>

	* Makefile.am: (EXTRA_DIST):
	added normal equivalent of .in files

2005-05-25  Christian Schaller  <cschalle@wildsrc.fluendo.lan>

	* gnl/gnltimeline.c:
	* gnl/gnlsource.c:
	* gnl/gnlcomposition.c:
	GCC4 fixes

2005-05-25  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c:
	Handle case where the seek is delayed (using pending_seek)

	* docs/libs/gnonlin-sections.txt:
	* gnl/gnltimeline.h:
	* gnl/gnlsource.h:
	* gnl/gnloperation.h:
	* gnl/gnlcomposition.h:
	removed extern _details

	* configure.ac : Releasing 0.2.1

2005-05-25  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c: (source_queue_media): 
	missing closing parenthisis
	removed unused 'filled' variable

2005-05-25  Wouter Paesen <wouter@kangaroot.net>
