@@ -6,18 +6,11 @@ SUBDIRS = common gnl test docs
 # These are all the possible subdirs
 DIST_SUBDIRS = common gnl test docs
 
-bin_SCRIPTS = gnonlin-config
-
-## m4datadir = $(datadir)/aclocal
-## m4data_DATA = gnonlin.m4
-
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gnonlin.pc
 
-man_MANS = gnonlin-config.1
-
-EXTRA_DIST = gnonlin.spec.in gnonlin.spec gnonlin-config.in \
-	     gnonlin-config gnonlin.pc gnonlin-uninstalled.pc \
+EXTRA_DIST = gnonlin.spec.in gnonlin.spec gnonlin.pc \
+             gnonlin-uninstalled.pc \
 	     gnonlin.pc.in gnonlin-uninstalled.pc.in \
 	     autogen.sh ChangeLog AUTHORS COPYING NEWS\
 	     LICENSE REQUIREMENTS README ABOUT-NLS $(man_MANS) 
