@@ -1,43 +1,0 @@
-.TH GStreamer 1 "March 2001"
-.SH NAME
-gstreamer\-config - script to get information about the installed version of GStreamer
-.SH SYNOPSIS
-.B  gstreamer\-config [\-\-prefix\fI[=DIR]\fP] [\-\-exec\-prefix\fI[=DIR]\fP] [\-\-version] [\-\-libs] [\-\-cflags]
-.SH DESCRIPTION
-.PP
-\fIgstreamer\-config\fP is a tool that is used to configure to determine
-the compiler and linker flags that should be used to compile
-and link programs that use \fIGStreamer\fP. It is also used internally
-to the .m4 macros for GNU autoconf that are included with \fIGStreamer\fP.
-.
-.SH OPTIONS
-.l
-\fIgstreamer\-config\fP accepts the following options:
-.TP 8
-.B  \-\-version
-Print the currently installed version of \fIGStreamer\fP on the standard output.
-.TP 8
-.B  \-\-libs
-Print the linker flags that are necessary to link a \fIGStreamer\fP program.
-.TP 8
-.B  \-\-cflags
-Print the compiler flags that are necessary to compile a \fIGStreamer\fP program.
-.TP 8
-.B  \-\-prefix=PREFIX
-If specified, use PREFIX instead of the installation prefix that \fIGStreamer\fP
-was built with when computing the output for the \-\-cflags and
-\-\-libs options. This option is also used for the exec prefix
-if \-\-exec\-prefix was not specified. This option must be specified
-before any \-\-libs or \-\-cflags options.
-.TP 8
-.B  \-\-exec\-prefix=PREFIX
-If specified, use PREFIX instead of the installation exec prefix that
-\fIGStreamer\fP was built with when computing the output for the \-\-cflags
-and \-\-libs options.  This option must be specified before any
-\-\-libs or \-\-cflags options.
-.SH SEE ALSO
-.BR gstreamer\-register (1),
-.BR gstreamer\-inspect (1),
-.BR gstreamer\-launch (1)
-.SH AUTHOR
-The GStreamer team at http://gstreamer.net/
